--- a/LearnObjective-C/LearnObjective-C/View/Base.lproj/Main.storyboard
+++ b/LearnObjective-C/LearnObjective-C/View/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCellTableView" rowHeight="84" id="4CK-WN-AZC">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyTableViewCell" rowHeight="84" id="4CK-WN-AZC" customClass="MyTableViewCell">
                                         <rect key="frame" x="0.0" y="28" width="375" height="84"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4CK-WN-AZC" id="zAc-fH-wgb">
@@ -62,10 +62,17 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="band" destination="sNJ-9v-KRi" id="dkT-5J-4kx"/>
+                                            <outlet property="imageBand" destination="NdA-l9-31x" id="el7-Pf-lbS"/>
+                                            <outlet property="title" destination="GlN-Rr-NOV" id="4JR-oD-sVi"/>
                                             <segue destination="1Lp-t4-J1F" kind="show" id="FM8-Cg-ltv"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="mr3-gY-0ja"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="PlF-x9-lGb"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -78,6 +85,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Letras" id="61Q-C2-gAR"/>
+                    <connections>
+                        <outlet property="tableView" destination="ECm-gV-H5W" id="yvy-5Z-7o5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -111,7 +121,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4sG-KE-vfa">
                                 <rect key="frame" x="16" y="184.5" width="359" height="482.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">Quantas vezes os meus proprios meios
+                                <string key="text">Quantas vezes os meus proprios meios
 Me levaram a lugar nenhum
 Cada passo dado era um erro
 Que me afastava do objetivo
@@ -149,7 +159,7 @@ E entender que sem o pai não somos nada
 Eu ando pela força do senhor
 Eu vivo pelas suas promessas
 A cada dia mato um leão
-A unção de Deus está em mim</mutableString>
+A unção de Deus está em mim</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
